# sense

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
device/: run_yamnet.py  run_yamnet.sh
sense/: __init__.py
sense/calibration/: samples.py  wav.py
sense/cli/: preparation.py
